2005-06-06  Ben Elliston  <bje@au.ibm.com>

	* doc/md.texi (Insn Splitting): Fix some wording.

2005-06-05  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (rs6000_emit_swdivsf): New function.
	(rs6000_emit_swdivdf): New function.
	* config/rs6000/rs6000.md (fres): New pattern.
	(divsf3): Add approximation through rs6000_emit_swdivsf.
	(fred): New pattern.
	(divdf3): Add approximation through rs6000_emit_swdivdf.
	* config/rs6000/rs6000-protos.h (rs6000_emit_swdivsf): Declare.
	(rs6000_emit_swdivdf): Declare.
	* config/rs6000/rs6000.opt (mswdiv): New option.
	* doc/invoke.texi (RS/6000 and PowerPC Options): Document mswdiv.

2005-06-05  Zdenek Dvorak  <dvorakz@suse.cz>

	PR tree-optimization/21846
	* tree-cfg.c (replace_uses_by): Update information stored at loops.
	* tree-flow.h (substitute_in_loop_info): Declare.
	* tree-scalar-evolution.c (initialize_scalar_evolutions_analyzer):
	Ensure that chrec_dont_know and chrec_known have a type.
	* tree-ssa-loop-niter.c (substitute_in_loop_info): New function.

2005-06-05  Steven Bosscher  <stevenb@suse.de>

	* config/i386/i386.c (x86_use_loop): Remove.
	* config/i386/i386.h (x86_use_loop): Remove extern decl.
	(TARGET_USE_LOOP): Remove.
	* config/i386/i386.md (doloop_end, doloop_end_internal): Remove.
	Also remove related define_splits.

2005-06-05  Dorit Nuzman  <dorit@il.ibm.com>

	* tree-flow.h (stmt_ann_d): Move aux to ...
	(tree_ann_common_d): ... here.
	* tree-ssa-loop-im.c (LIM_DATA, determine_invariantness_stmt,
	move_computations_stmt, schedule_sm): Update references to
	aux.
	* tree-vectorizer.h (set_stmt_info, vinfo_for_stmt): Likewise.
	* tree-vect-transform.c (vect_create_index_for_vector_ref): Update
	call to set_stmt_info.
	(vect_transform_loop): Likewise.
	* tree-vectorizer.c (new_loop_vec_info, destroy_loop_vec_info):
	Likewise.

	* tree-vect-analyze.c (vect_analyze_scalar_cycles): Made void instead of
	bool.
	(vect_mark_relevant): Takes two additional arguments - live_p and